{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 33,
  "lineage": "e6d204c0-9d81-ad56-8d54-9d530b4410a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amazon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb19571ca7f4bf31",
            "arn": "arn:aws:ec2:ap-northeast-2:599801461124:instance/i-0fe348aa0f019fd62",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe348aa0f019fd62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JmServer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09957b4d2ae15cd93",
            "private_dns": "ip-10-222-0-217.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.217",
            "public_dns": "ec2-13-124-164-89.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.164.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3c29ca14240f1db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09be1e05f783431f9",
            "tags": {
              "Name": "apne2-fastcampus-amazon-linux-2",
              "Project": "fastcampus-ansible"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-amazon-linux-2",
              "Project": "fastcampus-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fb30fa083d86eecc"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb19571ca7f4bf31",
            "arn": "arn:aws:ec2:ap-northeast-2:599801461124:instance/i-0c2afeda103d78cd0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2afeda103d78cd0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JmServer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02e764185c29d8d47",
            "private_dns": "ip-10-222-0-95.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.95",
            "public_dns": "ec2-3-35-20-121.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.20.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08535c275c401ad40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09be1e05f783431f9",
            "tags": {
              "Name": "apne2-fastcampus-amazon-linux-2",
              "Project": "fastcampus-ansible"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-amazon-linux-2",
              "Project": "fastcampus-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fb30fa083d86eecc"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9954ae1a8f15194",
            "arn": "arn:aws:ec2:ap-northeast-2:599801461124:instance/i-02d4f625cf4ac458e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d4f625cf4ac458e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JmServer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0743e149f6afafe50",
            "private_dns": "ip-10-222-0-32.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.32",
            "public_dns": "ec2-54-180-128-161.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.128.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05874724961c83d52",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09be1e05f783431f9",
            "tags": {
              "Name": "apne2-fastcampus-ubuntu",
              "Project": "fastcampus-ansible"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-ubuntu",
              "Project": "fastcampus-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fb30fa083d86eecc"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9954ae1a8f15194",
            "arn": "arn:aws:ec2:ap-northeast-2:599801461124:instance/i-08fb1e56cf70a682a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08fb1e56cf70a682a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JmServer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c20801839523cddf",
            "private_dns": "ip-10-222-0-38.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.38",
            "public_dns": "ec2-15-165-76-2.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.76.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e584e962d4eff590",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09be1e05f783431f9",
            "tags": {
              "Name": "apne2-fastcampus-ubuntu",
              "Project": "fastcampus-ansible"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-ubuntu",
              "Project": "fastcampus-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fb30fa083d86eecc"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:599801461124:security-group/sg-0fb30fa083d86eecc",
            "description": "Security Group for SSH.",
            "egress": [],
            "id": "sg-0fb30fa083d86eecc",
            "ingress": [],
            "name": "apne2-fastcampus-ssh",
            "name_prefix": "",
            "owner_id": "599801461124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apne2-fastcampus-ssh",
              "Project": "fastcampus-ansible",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "apne2-fastcampus-ssh",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-ssh",
              "Project": "fastcampus-ansible",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "apne2-fastcampus-ssh",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b8bdc86a44a5889"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-1378967936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fb30fa083d86eecc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 80,
            "id": "sgrule-147639827",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb30fa083d86eecc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 22,
            "id": "sgrule-3192296358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb30fa083d86eecc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}